# mccoy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  site.yml
fixtures/vuln_server/: README.md  clean_server.py  server.py
scripts/: smoke_codex.py  smoke_gpt56.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/scripts/: gen-changelog.ts  gen-cli-ref.ts
site/src/: content.config.ts
site/src/content/docs/: changelog.md  cli.md  fix-loop.md  fixtures.md  install.md  overview.md  quickstart.md
site/src/content/docs/rules/: index.md  mcc001.md  mcc002.md  mcc003.md  mcc004.md  mcc005.md  mcc006.md  mcc007.md  mcc008.md
site/src/pages/: index.astro
site/src/styles/: custom.css  landing.css  tokens.css
src/mccoy/: __init__.py  cli.py  codex_runner.py  connect.py  fix_loop.py  llm.py  models.py  report.py  scanner.py
src/mccoy/rules/: __init__.py  registry.py
src/mccoy/templates/: report.html.j2
tests/: test_cli.py  test_codex_runner.py  test_fix_loop.py  test_integration.py  test_llm.py  test_readme.py  test_report.py  test_rules.py  test_site_tokens.py
