[project]
name = "mccoy"
version = "0.1.0"
description = "Scan live MCP tool surfaces and help fix deterministic findings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "jinja2>=3.1",
  "mcp>=1.28,<2",
  "openai>=2.0",
  "pydantic>=2.11",
  "rich>=13.9",
  "typer>=0.15",
]

[project.scripts]
mccoy = "mccoy.cli:app"

[dependency-groups]
dev = ["mypy>=1.13", "pytest>=8.3", "pytest-anyio>=0.0.0", "ruff>=0.9"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
